# alpakka-firmware-esp32s3

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  bus.c  button.c  config.c  dhat.c  helper.c  hid.c  idf_component.yml  imu.c  led.c  main.c  nvm.c  profile.c  rotary.c  thanks.c  thumbstick.c  touch.c  tusb_config.c  uart.c  xinput.c
main/headers/: button.h  config.h  helper.h  hid.h  led.h  pin.h  thumbstick.h
main/profiles/: console.c
